<resources>
    <string name="app_name">SqliteDemo</string>
    <string name="update">升级</string>
    <string name="add">添加</string>
    <string name="query">查询</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="name">name:</string>
    <string name="age">age:</string>
</resources>
