<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sqlitedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_query"
            android:layout_width="280dp"
            android:layout_height="match_parent" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/query"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/upgrade"
            android:text="@string/update"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/add"
            android:text="@string/add"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
